fixes add tray button wrapping onto next row

--- a/src/client/tracking/add-tray.scss
+++ b/src/client/tracking/add-tray.scss
@@ -12,6 +12,6 @@
   }
 
   .tracking-tray-url {
-    width: calc(100% - 8em);
+    width: calc(100% - 9em);
   }
 }
